@@ -11,6 +11,7 @@ ufsutils (7.1-3) UNRELEASED; urgency=low
   * Use dh_prep instead of “dh_clean -k”.
   * Do not use stamp files for build.
   * Include quilt.make snippet instead of using ad-hoc code.
+  * Remove unused ufsutils variable and rename libufs to lib in debian/rules.
 
  -- Guillem Jover <guillem@debian.org>  Sat, 18 Apr 2009 01:47:10 +0200
 
